# nfc

./: .pylintrc-tests  README.md  pyproject.toml
.circleci/: config.yml
ntc/: __init__.py
ntc/cfg/: __init__.py  apps.py  contexts.py  docker.py  environments.py  helm.py  kubectl.py  namespaces.py  tasks.py
ntc/cmds/: app.py  cloud.py  dev.py
ntc/cmds/cloud/: __init__.py  install.py  reinstall.py  uninstall.py  upgrade.py
ntc/cmds/docker/: __init__.py  build.py  push.py  start.py  tag.py
ntc/cmds/helm/: __init__.py  dependency.py  install.py  uninstall.py  upgrade.py
ntc/cmds/kubectl/: __init__.py  create.py  delete.py  get.py
ntc/helpers/: app.py  chart.py  cmd.py  config.py  helm.py  json.py  kubectl.py  tag.py  tasks.py  workdir.py  yaml.py
tests/: __init__.py  conftest.py  test_cloud.py  test_dev.py  test_helm.py  test_kubectl.py
tests/cfg/: test_tasks.py
tests/cloud/: test_upgrade.py
tests/docker/: test_build.py  test_push.py  test_start.py  test_tag.py
tests/helpers/: test_app.py  test_computed_tasks.py  test_config.py  test_work_dir.py
